DDF-3297 add security manager to DDF (#2879)
DDF-3297 add security manager to DDF